--- a/snippets/cssclasses/banner.css
+++ b/snippets/cssclasses/banner.css
@@ -39,11 +39,80 @@ body {
   --banner-slope-border-color: var(--color-accent);
   --banner-width: calc(100cqw + 2 * var(--file-margins-inline));
   --banner-print-width: full-bleed;
+  --banner-y-position: 50%;
+  --banner-x-position: 50%;
 }
 
 .is-mobile {
   --banner-height: 180px;
   --banner-slope-border-width: 4px;
+}
+
+.markdown-preview-view.banner.banner-y-0 {
+  --banner-y-position: 100%;
+}
+.markdown-preview-view.banner.banner-x-0 {
+  --banner-x-position: 0%;
+}
+.markdown-preview-view.banner.banner-y-1 {
+  --banner-y-position: 90%;
+}
+.markdown-preview-view.banner.banner-x-1 {
+  --banner-x-position: 10%;
+}
+.markdown-preview-view.banner.banner-y-2 {
+  --banner-y-position: 80%;
+}
+.markdown-preview-view.banner.banner-x-2 {
+  --banner-x-position: 20%;
+}
+.markdown-preview-view.banner.banner-y-3 {
+  --banner-y-position: 70%;
+}
+.markdown-preview-view.banner.banner-x-3 {
+  --banner-x-position: 30%;
+}
+.markdown-preview-view.banner.banner-y-4 {
+  --banner-y-position: 60%;
+}
+.markdown-preview-view.banner.banner-x-4 {
+  --banner-x-position: 40%;
+}
+.markdown-preview-view.banner.banner-y-5 {
+  --banner-y-position: 50%;
+}
+.markdown-preview-view.banner.banner-x-5 {
+  --banner-x-position: 50%;
+}
+.markdown-preview-view.banner.banner-y-6 {
+  --banner-y-position: 40%;
+}
+.markdown-preview-view.banner.banner-x-6 {
+  --banner-x-position: 60%;
+}
+.markdown-preview-view.banner.banner-y-7 {
+  --banner-y-position: 30%;
+}
+.markdown-preview-view.banner.banner-x-7 {
+  --banner-x-position: 70%;
+}
+.markdown-preview-view.banner.banner-y-8 {
+  --banner-y-position: 20%;
+}
+.markdown-preview-view.banner.banner-x-8 {
+  --banner-x-position: 80%;
+}
+.markdown-preview-view.banner.banner-y-9 {
+  --banner-y-position: 10%;
+}
+.markdown-preview-view.banner.banner-x-9 {
+  --banner-x-position: 90%;
+}
+.markdown-preview-view.banner.banner-y-10 {
+  --banner-y-position: 0%;
+}
+.markdown-preview-view.banner.banner-x-10 {
+  --banner-x-position: 100%;
 }
 
 .markdown-preview-view.banner {
@@ -65,6 +134,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: var(--banner-x-position, 50%) var(--banner-y-position, 50%);
 }
 .markdown-preview-view.banner .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) + br {
   display: none;
@@ -98,6 +168,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: var(--banner-x-position, 50%) var(--banner-y-position, 50%);
   }
   .print .markdown-preview-view.banner .mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed) + br {
     display: none;
