--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -14,6 +14,7 @@
 @use "callout-film-strip";
 @use "callout-grid";
 @use "callout-fas-infobox";
+@use "callout-inline-list";
 @use "callout-full-width-image";
 @use "callout-letter";
 @use "callout-masonry";
